2023-10-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha02: Elk Rut';git push
	git tag -a 5.1.9-alpha02 -m '';git push --tags

	* NCO 5.1.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha01: Bandelier';git push
	git tag -a 5.1.9-alpha01 -m 'Functionally identical to 5.1.8 (except ncremap)';git push --tags

	* Add ncremap invocations for trbilin, trintbilin

	* Add ncremap synonyms esmfaave, ncoaave, traave, esmfbilin, esmfndtos

2023-09-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8 release procedure:
	cd ~/nco;git commit -a -m "Version 5.1.8: Cafe Pasqual\'s";git push
	git tag -a 5.1.8 -m 'all: NC_STRING atts ok, Frontier;ncremap mpas grd rdn, E3SMU 1.9.0;ncks chk_chr, chk_mss, diwg_chk';git push --tags

2023-09-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha05: Foggy Wharf';git push
	git tag -a 5.1.8-alpha05 -m 'ncclimo: disambiguate Frontier/Perlmutter login nodes; ncremap: nrm=N/A; E3SMU 1.9.0 paths';git push --tags

	* Verify nco_bm.pl --regress ncremap works once again with server dust=imua

	* ncremap/ncclimo update NPO paths to be consistent with E3SMU 1.9.0

2023-09-07  Charlie Zender  <zender@uci.edu>

	* Make "N/A" equivalent to "none" when parsing ESMF "normalization" map attributes

2023-09-01  Charlie Zender  <zender@uci.edu>

	* Disambiguate Frontier + Perlmutter nodes named login[0123456789][0123456789]

2023-08-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha04: Happy Valley';git push
	git tag -a 5.1.8-alpha04 -m 'all: Frontier';git push --tags

	* ncremap/ncclimo: modify to support Frontier

	* Build on Frontier with Makefile build-engine

2023-08-30  Charlie Zender  <zender@uci.edu>

	* Clarify error message with how to get filters working
